# Raspberry-Pi-Home-Monitor

./: .gitignore
client/: pyproject.toml
client/client/: __init__.py  example.env
server/: pyproject.toml
server/server/: __init__.py  example.env
